fix: use vertical-align in button CSS this should fix an issue where buttons with icons were not vertically aligned with other buttons in a normal flow (no flex) - I'm not sure _middle_ is the right value though

--- a/packages/components/src/components/button/button.css
+++ b/packages/components/src/components/button/button.css
@@ -10,6 +10,7 @@
   --font-size: var(--scl-font-size-16);
   --line-height: var(--scl-font-line-height-150);
   --spacing-icon-x: var(--scl-spacing-8);
+  --vertical-align: middle;
 
   /* size: small */
   --font-size-small: var(--scl-font-size-12);
@@ -64,6 +65,7 @@
   min-height: var(--min-height);
   padding-left: var(--spacing-x);
   padding-right: var(--spacing-x);
+  vertical-align: var(--vertical-align);
   transition: var(--transition);
 }
 
